Address overflow issue and add responsiveness

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,7 @@
 .home {
     font-family: Arial, Helvetica, sans-serif;
     border: 1px solid whitesmoke;
+    margin-top: -2px;
 }
 
 .header {
