--- a/app/assets/stylesheets/library.scss
+++ b/app/assets/stylesheets/library.scss
@@ -15,7 +15,7 @@
     width: 18%;
     padding: 6px;
     position: fixed;
-    margin-top: 102px;
+    margin-top: 112px;
     height: 100%;
     font-family: verdana;
 }
@@ -92,12 +92,13 @@
 }
 
 .library-main {
+    height: 85vh;
     color:whitesmoke;
     background-color: #1d1f22;
     width: 80%;
     padding: 6px;
     padding-bottom: 50px;
-    margin-top: 102px;
+    margin-top: 112px;
     position: absolute;
     right:0;
     overflow-x: auto;
