--- a/app/assets/stylesheets/library_components.scss
+++ b/app/assets/stylesheets/library_components.scss
@@ -23,7 +23,7 @@
     overflow: hidden;
 }
 .artist-index {
-    height: 100vh;
+    height: 85vh;
     display: flex;
     flex-direction: column;
     overflow: auto;
