--- a/app/assets/stylesheets/music_player.scss
+++ b/app/assets/stylesheets/music_player.scss
@@ -1,5 +1,6 @@
 .player-container {
     height: 55px;
+    padding: 5px;
     color: white;
     background-color: #333333;
 
