--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
+  align-items: center;
   a {
     padding: 4px;
   }
